--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,48 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.3/css/bulma.css">
+	<style>
+		.logo {
+			width: 1.75rem;
+			margin-right: 0.5em;
+		}
+	</style>
 	<title>Smart Dorm</title>
 </head>
-<body class="container">
+<body>
 	<header class="navbar">
 		<div class="navbar-brand">
-			<strong class="navbar-item">Smart Dorm</strong>
+			<spam class="navbar-item">
+				<img
+					class="logo"
+					src="/gallery/cellwall.png"
+				>
+				<strong>Smart Dorm</strong>
+			</spam>
 
-			<a class="navbar-item" href="https://github.com/NotWoods/smart-dorm" target="_blank">
+			<a
+				class="navbar-item"
+				href="https://github.com/NotWoods/smart-dorm"
+				target="_blank"
+			>
 				GitHub
 			</a>
 		</div>
 	</header>
-	<div>
-		<button class="button is-light" data-action="/cmd/doorbell">Trigger doorbell</button>
-	</form>
+	<div class="container">
+		<button
+			class="button"
+			data-action="/cmd/doorbell"
+		>
+			Trigger doorbell
+		</button>
+		<button
+			class="button"
+			data-action="/cmd/cellwall-power"
+		>
+			Toggle CellWall power
+		</button>
+	</div>
 </body>
-<script>
-	'use strict';
-	document.getElementsByTagName('button').forEach(button => {
-		button.onclick = () => {
-			//
-		}
-	});
-</script>
+<script async defer src="script.js"></script>
 </html>
