--- a/server/public/editor/index.html
+++ b/server/public/editor/index.html
@@ -1,87 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CellWall Editor</title>
     <style>
-        body {
-            text-align: center;
-        }
+      html,
+      body {
+        margin: 0;
+        height: 100%;
+      }
 
-        .board {
-            position: relative;
-            margin: 16px auto;
+      body {
+        display: flex;
+        flex-flow: column;
+      }
 
-            background: #43A047 no-repeat;
-            background-size: cover;
-            border: 4px solid #1B5E20;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        }
+      #options {
+        padding: 8px;
+        text-align: center;
+      }
 
-        .board.preview {
-            background-image: url('preview.jpg');
-        }
+      .board-wrapper {
+        margin: 12px;
+        flex: 1;
+      }
+      .board {
+        position: absolute;
 
-        .display {
-            display: block;
-            height: 30px;
-            width: 30px;
-            position: absolute;
+        transform-origin: left top;
+        background: #43a047 no-repeat;
+        background-size: cover;
+        outline: 4px solid #1b5e20;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      }
 
-            background: #eee;
-            border: 0;
-            cursor: move;
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-            transition: box-shadow 0.2s ease, opacity 0.2s ease, transform 0.3s ease;
-        }
+      .board.preview {
+        background-image: url("preview.jpg");
+      }
 
-        .display.dragging {
-            transition: none;
-        }
+      .display {
+        display: block;
+        height: 30px;
+        width: 30px;
+        position: absolute;
 
-        .display.selected {
-            box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-        }
+        background: #eee;
+        border: 0;
+        cursor: move;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+        transition: box-shadow 0.2s ease, opacity 0.2s ease, transform 0.3s ease;
+      }
 
-        .preview .display {
-            opacity: 0.7;
-        }
+      .display.dragging {
+        transition: none;
+      }
+
+      .display.selected {
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+          0 10px 10px rgba(0, 0, 0, 0.22);
+      }
+
+      .preview .display {
+        opacity: 0.7;
+      }
     </style>
-    <script defer src="../node_modules/interactjs/dist/interact.min.js"></script>
+    <script
+      defer
+      src="../node_modules/interactjs/dist/interact.min.js"
+    ></script>
     <script defer src="editor-ui.js"></script>
-    <script defer src="../node_modules/socket.io-client/dist/socket.io.js"></script>
+    <script
+      defer
+      src="../node_modules/socket.io-client/dist/socket.io.js"
+    ></script>
     <script defer src="connection.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <form id="options">
-        <label>
-            Board width
-            <input type="number" name="width">
-        </label>
-        <label>
-            Board height
-            <input type="number" name="height">
-        </label>
-        <label>
-            <input type="checkbox" name="preview"> Show preview
-        </label>
-        <fieldset>
-            <label>
-                X
-                <input type="number" name="x">
-            </label>
-            <label>
-                Y
-                <input type="number" name="y">
-            </label>
-            <select name="display"></select>
-        </fieldset>
+      <label> Board width <input type="number" name="width" /> </label>
+      <label> Board height <input type="number" name="height" /> </label>
+      <label> <input type="checkbox" name="preview" /> Show preview </label>
+      <fieldset>
+        <label> X <input type="number" name="x" /> </label>
+        <label> Y <input type="number" name="y" /> </label>
+        <select name="display"></select>
+      </fieldset>
     </form>
-    <section class="board" id="cellwall-board">
-    </section>
-</body>
-
+    <div class="board-wrapper">
+      <section class="board" id="cellwall-board"></section>
+    </div>
+  </body>
 </html>
