Add action menu

--- a/server/public/editor/index.html
+++ b/server/public/editor/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CellWall Editor</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon32.png" />
     <style>
       html,
       body {
