--- a/server/public/index.html
+++ b/server/public/index.html
@@ -45,7 +45,9 @@
   <body>
     <form action="/wall/action" method="POST">
       <template id="action-list-item">
-        <li><button type="submit" name="action" value="">Action</button></li>
+        <li>
+          <button type="submit" formaction="/wall/action/action">Action</button>
+        </li>
       </template>
       <ul id="action-list"></ul>
     </form>
