Tweak editor code

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,6 +6,7 @@
     <title>CellWall</title>
     <link rel="icon" type="image/png" sizes="16x16" href="favicon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon32.png" />
+    <meta name="theme-color" content="#2e7d32" />
     <style>
       body {
         margin: 0;
