--- a/web/public/editor/index.html
+++ b/web/public/editor/index.html
@@ -77,7 +77,7 @@
                 opacity: 0.7;
             }
         </style>
-        <script defer src="/editor/editor.js"></script>
+        <script defer src="build_editor.js"></script>
     </head>
 
     <body>
