--- a/web/public/index.html
+++ b/web/public/index.html
@@ -41,7 +41,7 @@
                 opacity: 1;
             }
         </style>
-        <script defer src="home.js"></script>
+        <script defer src="build_remote.js"></script>
     </head>
 
     <body>
