--- a/server/src/app.html
+++ b/server/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/png" href="/logo.png" sizes="192x192" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="/css/base.css" />
 		%svelte.head%
 	</head>
 	<body>
