Redesign preset page

--- a/javascript/client/src/app.html
+++ b/javascript/client/src/app.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/css/base.css" />
 		%svelte.head%
 	</head>
-	<body>
-		<div id="svelte">%svelte.body%</div>
+	<body class="bg-slate-900">
+		<div id="svelte" class="min-h-full">%svelte.body%</div>
 	</body>
 </html>
