--- a/javascript/client/src/app.html
+++ b/javascript/client/src/app.html
@@ -5,9 +5,9 @@
 		<link rel="icon" type="image/png" href="/logo.png" sizes="192x192" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/css/base.css" />
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 	<body class="bg-slate-900">
-		<div id="svelte" class="min-h-full">%svelte.body%</div>
+		<div id="svelte" class="min-h-full">%sveltekit.body%</div>
 	</body>
 </html>
